--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fal-ai/serverless-client": "^0.14.3",
     "@prisma/client": "^5.0.0",
     "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-radio-group": "^1.2.0",
