--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@stripe/stripe-js": "^1.54.1",
@@ -34,6 +34,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-redux": "^8.1.1",
+    "recharts": "^2.13.0",
     "stripe": "^12.11.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
